tests/ui/validate_no_list.stderr
error: expected parentheses: #[validate(...)]
 --> $DIR/validate_no_list.rs:5:13
  |
5 |     #[validate = "custom_validator"]
  |                ^
